tests/negative/neg_pr115_missing_case_arm_semicolon.safe
package Neg_PR115_Missing_Case_Arm_Semicolon

   type Switch is range 0 to 1;

   function Broken (Input : Switch) returns Boolean

      case Input
         when 0
            return False return True;

         when others
            return True;




